--- a/front-end/hotelreservation/src/css/header.css
+++ b/front-end/hotelreservation/src/css/header.css
@@ -53,7 +53,7 @@
 }
 
 #page-content-wrapper{
-  /* background-image: url(../assets/22249341.png); */
+  background-image: url(../images/22249341.png);
   background-color: rgb(240, 240, 240);
 }
 .list-group-flush>.list-group-item {
