--- a/front-end/hotelreservation/src/css/restaurant.css
+++ b/front-end/hotelreservation/src/css/restaurant.css
@@ -147,7 +147,7 @@
 
 /* button style */
 /* line 175, C:/Users/SPN Graphics/Desktop/hotel_up/Hotel_HTML/assets/scss/_common.scss */
-.btn {
+.btn-2 {
   -moz-user-select: none;
   background: #dca73a;
   border: medium none;
