--- a/front-end/hotelreservation/src/css/register.css
+++ b/front-end/hotelreservation/src/css/register.css
@@ -339,7 +339,7 @@ input {
   cursor: pointer;
 }
 
-.input-group {
+.input-group2 {
   position: relative;
   margin-bottom: 33px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
