--- a/front-end/hotelreservation/src/css/sb-admin-2.css
+++ b/front-end/hotelreservation/src/css/sb-admin-2.css
@@ -1,4 +1,4 @@
-/*!
+/* !
  * Start Bootstrap - SB Admin 2 v4.1.1 (https://startbootstrap.com/themes/sb-admin-2)
  * Copyright 2013-2020 Start Bootstrap
  * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-sb-admin-2/blob/master/LICENSE)
@@ -1856,7 +1856,7 @@ pre code {
 .table-responsive > .table-bordered {
   border: 0;
 }
-
+/* 
 .form-control {
   display: block;
   width: 100%;
@@ -1871,7 +1871,7 @@ pre code {
   border: 1px solid #d1d3e2;
   border-radius: 0.35rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
+} */
 
 @media (prefers-reduced-motion: reduce) {
   .form-control {
@@ -3378,7 +3378,7 @@ input[type="button"].btn-block {
   clip: rect(0, 0, 0, 0);
   pointer-events: none;
 }
-
+/* 
 .input-group {
   position: relative;
   display: flex;
@@ -3449,7 +3449,7 @@ input[type="button"].btn-block {
 .input-group > .custom-file:not(:first-child) .custom-file-label {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
-}
+} */
 
 .input-group-prepend,
 .input-group-append {
@@ -3507,7 +3507,7 @@ input[type="button"].btn-block {
   margin-top: 0;
 }
 
-.input-group-lg > .form-control:not(textarea),
+/* .input-group-lg > .form-control:not(textarea),
 .input-group-lg > .custom-select {
   height: calc(1.5em + 1rem + 2px);
 }
@@ -3539,7 +3539,7 @@ input[type="button"].btn-block {
   font-size: 0.875rem;
   line-height: 1.5;
   border-radius: 0.2rem;
-}
+} */
 
 .input-group-lg > .custom-select,
 .input-group-sm > .custom-select {
